removed unused nav , updated ui, background colors, nav and perfected power mod , removed unnecessary padding and overall improved significantly

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,4 @@
 {
-    "cSpell.words": [
-        "Hexa",
-        "Miligram",
-        "numbersystem",
-        "Reaumur"
-    ]
+  "cSpell.words": ["Hexa", "Miligram", "numbersystem", "Reaumur"],
+  "liveServer.settings.port": 5501
 }
